--- a/sfml-template.vcxproj
+++ b/sfml-template.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Sources\Managers\SoundManager.cpp" />
     <ClCompile Include="Sources\Framework\Game.cpp" />
     <ClCompile Include="Sources\HollowKnight.cpp" />
+    <ClCompile Include="Sources\Player\Player.cpp" />
     <ClCompile Include="Sources\Utils\Utility.cpp" />
     <ClCompile Include="Sources\Managers\ViewManager.cpp" />
     <ClCompile Include="Sources\Managers\TextureManager.cpp" />
@@ -160,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Managers\SoundManager.hpp" />
+    <ClInclude Include="Sources\Player\Player.hpp" />
     <ClInclude Include="Sources\Scene\Scene.hpp" />
     <ClInclude Include="Sources\include\Singleton.hpp" />
     <ClInclude Include="Sources\Utils\Utility.hpp" />
