--- a/sfml-template.vcxproj
+++ b/sfml-template.vcxproj
@@ -148,6 +148,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Sources\Scene\PlayScene.cpp" />
+    <ClCompile Include="Sources\Managers\UIManager.cpp" />
+    <ClCompile Include="Sources\Utils\Inventory.cpp" />
     <ClCompile Include="Sources\Scene\ManagerTestScene.cpp" />
     <ClCompile Include="Sources\Managers\SoundManager.cpp" />
     <ClCompile Include="Sources\Framework\Game.cpp" />
@@ -160,6 +163,8 @@
     <ClCompile Include="Sources\Scene\TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Sources\Scene\PlayScene.h" />
+    <ClInclude Include="Sources\Utils\Inventory.h" />
     <ClInclude Include="Sources\Scene\ManagerTestScene.hpp" />
     <ClInclude Include="Sources\Managers\SoundManager.hpp" />
     <ClInclude Include="Sources\Scene\Scene.hpp" />
@@ -171,6 +176,7 @@
     <ClInclude Include="Sources\Managers\InputManager.hpp" />
     <ClInclude Include="Sources\Managers\SceneManager.hpp" />
     <ClInclude Include="Sources\Scene\TitleScene.hpp" />
+    <ClInclude Include="Sources\Managers\UIManager.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
