--- a/sfml-template.vcxproj.filters
+++ b/sfml-template.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="Sources\Managers\SceneManager.cpp" />
     <ClCompile Include="Sources\Scene\TitleScene.cpp" />
     <ClCompile Include="Sources\Utils\textureListBoxUI.cpp" />
-    <ClCompile Include="Sources\Utils\Inventories.cpp" />
+    <ClCompile Include="Sources\Scene\TempUIScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Scene\PlayScene.hpp" />
@@ -46,6 +46,6 @@
     <ClInclude Include="Sources\Scene\TitleScene.hpp" />
     <ClInclude Include="Sources\Managers\UIManager.hpp" />
     <ClInclude Include="Sources\Utils\textureListBoxUI.hpp" />
-    <ClInclude Include="Sources\Utils\Inventories.hpp" />
+    <ClInclude Include="Sources\Scene\TempUIScene.h" />
   </ItemGroup>
 </Project>
