[UPDATE]: 에디터 씬 배치 적용 2차

--- a/sfml-template.vcxproj
+++ b/sfml-template.vcxproj
@@ -148,6 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Sources\Objects\Stable\BackgroundImages.cpp" />
     <ClCompile Include="Sources\Objects\Stable\Portal.cpp" />
     <ClCompile Include="Sources\Maps\Map.cpp" />
     <ClCompile Include="Sources\Objects\Moveable\Monster\Monster.cpp" />
@@ -183,8 +184,10 @@
     <ClCompile Include="Sources\Maps\Town_Map.cpp" />
     <ClCompile Include="Sources\Objects\Moveable\Monster\tempMob.cpp" />
     <ClCompile Include="Sources\Objects\Stable\Stable.cpp" />
+    <ClCompile Include="Sources\Utils\Textbox.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Sources\Objects\Stable\BackgroundImages.hpp" />
     <ClInclude Include="Sources\Objects\Stable\Portal.hpp" />
     <ClInclude Include="Sources\Objects\Moveable\Monster\Monster.hpp" />
     <ClInclude Include="Sources\Objects\Moveable\Character.hpp" />
@@ -224,6 +227,7 @@
     <ClInclude Include="Sources\Maps\Town_Map.hpp" />
     <ClInclude Include="Sources\Objects\Moveable\Monster\tempMob.hpp" />
     <ClInclude Include="Sources\Objects\Stable\Stable.hpp" />
+    <ClInclude Include="Sources\Utils\Textbox.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
