--- a/sfml-template.vcxproj.filters
+++ b/sfml-template.vcxproj.filters
@@ -38,6 +38,7 @@
     <ClCompile Include="Sources\Objects\Stable\Portal.cpp" />
     <ClCompile Include="Sources\Objects\Stable\BackgroundImages.cpp" />
     <ClCompile Include="Sources\Utils\Textbox.cpp" />
+    <ClCompile Include="Sources\Objects\Stable\Bench.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Scene\PlayScene.h" />
@@ -52,6 +53,7 @@
     <ClInclude Include="Sources\Objects\Stable\Portal.hpp" />
     <ClInclude Include="Sources\Objects\Stable\BackgroundImages.hpp" />
     <ClInclude Include="Sources\Utils\Textbox.hpp" />
+    <ClInclude Include="Sources\Objects\Stable\Bench.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Scene\PlayScene.hpp" />
