--- a/sfml-template.vcxproj
+++ b/sfml-template.vcxproj
@@ -148,6 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Sources\Animation\EffectManager.cpp" />
     <ClCompile Include="Sources\Objects\Stable\Portal.cpp" />
     <ClCompile Include="Sources\Maps\Map.cpp" />
     <ClCompile Include="Sources\Objects\Moveable\Monster\Monster.cpp" />
@@ -185,6 +186,7 @@
     <ClCompile Include="Sources\Objects\Stable\Stable.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Sources\Animation\EffectManager.hpp" />
     <ClInclude Include="Sources\Objects\Stable\Portal.hpp" />
     <ClInclude Include="Sources\Objects\Moveable\Monster\Monster.hpp" />
     <ClInclude Include="Sources\Objects\Moveable\Character.hpp" />
