Shop UI, BGM, EffectSound

--- a/sfml-template.vcxproj
+++ b/sfml-template.vcxproj
@@ -148,6 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Sources\Scene\MapperScene.cpp" />
     <ClCompile Include="Sources\Items\Item.cpp" />
     <ClCompile Include="Sources\Items\Coin.cpp" />
     <ClCompile Include="Sources\Animation\EffectManager.cpp" />
@@ -191,6 +192,7 @@
     <ClCompile Include="Sources\Utils\Textbox.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Sources\Scene\MapperScene.hpp" />
     <ClInclude Include="Sources\Items\Item.hpp" />
     <ClInclude Include="Sources\Items\Coin.hpp" />
     <ClInclude Include="Sources\Animation\EffectManager.hpp" />
