--- a/sfml-template.vcxproj.filters
+++ b/sfml-template.vcxproj.filters
@@ -42,6 +42,11 @@
     <ClCompile Include="Sources\Objects\Stable\BackgroundImages.cpp" />
     <ClCompile Include="Sources\Utils\Textbox.cpp" />
     <ClCompile Include="Sources\Objects\Stable\Bench.cpp" />
+    <ClCompile Include="Sources\Objects\Stable\KingsPassImages.cpp" />
+    <ClCompile Include="Sources\Objects\Stable\Platform.cpp" />
+    <ClCompile Include="Sources\Objects\Stable\Door.cpp" />
+    <ClCompile Include="Sources\Objects\Stable\thorn.cpp" />
+    <ClCompile Include="Sources\Objects\Stable\Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Scene\PlayScene.h" />
@@ -60,6 +65,11 @@
     <ClInclude Include="Sources\Objects\Stable\BackgroundImages.hpp" />
     <ClInclude Include="Sources\Utils\Textbox.hpp" />
     <ClInclude Include="Sources\Objects\Stable\Bench.hpp" />
+    <ClInclude Include="Sources\Objects\Stable\KingsPassImages.hpp" />
+    <ClInclude Include="Sources\Objects\Stable\Platform.hpp" />
+    <ClInclude Include="Sources\Objects\Stable\Door.hpp" />
+    <ClInclude Include="Sources\Objects\Stable\thorn.hpp" />
+    <ClInclude Include="Sources\Objects\Stable\Wall.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Scene\PlayScene.hpp" />
