[UPDATE]: 스테이지 배치 완성

--- a/sfml-template.vcxproj.filters
+++ b/sfml-template.vcxproj.filters
@@ -50,6 +50,8 @@
     <ClCompile Include="Sources\Objects\Stable\thorn.cpp" />
     <ClCompile Include="Sources\Objects\Stable\Wall.cpp" />
     <ClCompile Include="Sources\Objects\Stable\CrossRoadImages.cpp" />
+    <ClCompile Include="Sources\Objects\Stable\BossRoomImages.cpp" />
+    <ClCompile Include="Sources\Objects\Stable\Central.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Scene\PlayScene.h" />
@@ -76,6 +78,8 @@
     <ClInclude Include="Sources\Objects\Stable\thorn.hpp" />
     <ClInclude Include="Sources\Objects\Stable\Wall.hpp" />
     <ClInclude Include="Sources\Objects\Stable\CrossRoadImages.hpp" />
+    <ClInclude Include="Sources\Objects\Stable\BossRoomImages.hpp" />
+    <ClInclude Include="Sources\Objects\Stable\Central.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Scene\PlayScene.hpp" />
