--- a/sfml-template.vcxproj
+++ b/sfml-template.vcxproj
@@ -148,6 +148,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Sources\Objects\Stable\Central.cpp" />
+    <ClCompile Include="Sources\Objects\Stable\BossRoomImages.cpp" />
     <ClCompile Include="Sources\Scene\MapperScene.cpp" />
     <ClCompile Include="Sources\Objects\Stable\CrossRoadImages.cpp" />
     <ClCompile Include="Sources\Objects\Stable\Door.cpp" />
@@ -199,6 +201,8 @@
     <ClCompile Include="Sources\Objects\Stable\Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Sources\Objects\Stable\Central.hpp" />
+    <ClInclude Include="Sources\Objects\Stable\BossRoomImages.hpp" />
     <ClInclude Include="Sources\Scene\MapperScene.hpp" />
     <ClInclude Include="Sources\Objects\Stable\CrossRoadImages.hpp" />
     <ClInclude Include="Sources\Objects\Stable\Door.hpp" />
