--- a/sfml-template.vcxproj
+++ b/sfml-template.vcxproj
@@ -148,6 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Sources\Objects\Collider.cpp" />
     <ClCompile Include="Sources\Objects\Stable\Central.cpp" />
     <ClCompile Include="Sources\Objects\Stable\BossRoomImages.cpp" />
     <ClCompile Include="Sources\Scene\MapperScene.cpp" />
@@ -201,6 +202,7 @@
     <ClCompile Include="Sources\Objects\Stable\Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Sources\Objects\Collider.hpp" />
     <ClInclude Include="Sources\Objects\Stable\Central.hpp" />
     <ClInclude Include="Sources\Objects\Stable\BossRoomImages.hpp" />
     <ClInclude Include="Sources\Scene\MapperScene.hpp" />
