--- a/sfml-template.vcxproj.filters
+++ b/sfml-template.vcxproj.filters
@@ -52,6 +52,7 @@
     <ClCompile Include="Sources\Objects\Stable\CrossRoadImages.cpp" />
     <ClCompile Include="Sources\Objects\Stable\BossRoomImages.cpp" />
     <ClCompile Include="Sources\Objects\Stable\Central.cpp" />
+    <ClCompile Include="Sources\Objects\Collider.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Scene\PlayScene.h" />
@@ -80,6 +81,7 @@
     <ClInclude Include="Sources\Objects\Stable\CrossRoadImages.hpp" />
     <ClInclude Include="Sources\Objects\Stable\BossRoomImages.hpp" />
     <ClInclude Include="Sources\Objects\Stable\Central.hpp" />
+    <ClInclude Include="Sources\Objects\Collider.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Scene\PlayScene.hpp" />
