[UPDATE]: 포탈 구현

--- a/sfml-template.vcxproj
+++ b/sfml-template.vcxproj
@@ -148,6 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Sources\Maps\BossRoom_Map.cpp" />
     <ClCompile Include="Sources\Objects\Collider.cpp" />
     <ClCompile Include="Sources\Objects\Stable\Central.cpp" />
     <ClCompile Include="Sources\Objects\Stable\BossRoomImages.cpp" />
@@ -203,6 +204,7 @@
     <ClCompile Include="Sources\Objects\Moveable\Monster\Vengefly.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Sources\Maps\BossRoom_Map.hpp" />
     <ClInclude Include="Sources\Objects\Moveable\Monster\Vengefly.hpp" />
     <ClInclude Include="Sources\Objects\Collider.hpp" />
     <ClInclude Include="Sources\Objects\Stable\Central.hpp" />
