--- a/sfml-template.vcxproj.filters
+++ b/sfml-template.vcxproj.filters
@@ -54,6 +54,7 @@
     <ClCompile Include="Sources\Objects\Stable\Central.cpp" />
     <ClCompile Include="Sources\Objects\Moveable\Monster\Vengefly.cpp" />
     <ClCompile Include="Sources\Objects\Collider.cpp" />
+    <ClCompile Include="Sources\Maps\BossRoom_Map.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Scene\PlayScene.h" />
@@ -84,6 +85,7 @@
     <ClInclude Include="Sources\Objects\Stable\Central.hpp" />
     <ClInclude Include="Sources\Objects\Moveable\Monster\Vengefly.hpp" />
     <ClInclude Include="Sources\Objects\Collider.hpp" />
+    <ClInclude Include="Sources\Maps\BossRoom_Map.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Scene\PlayScene.hpp" />
