[UPDATE]: 일시정지 메뉴, 타이틀씬 게임종료 개선

--- a/sfml-template.vcxproj
+++ b/sfml-template.vcxproj
@@ -148,6 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Sources\UI\PauseUI.cpp" />
     <ClCompile Include="Sources\Maps\BossRoom_Map.cpp" />
     <ClCompile Include="Sources\Objects\Collider.cpp" />
     <ClCompile Include="Sources\Objects\Stable\Central.cpp" />
@@ -204,6 +205,7 @@
     <ClCompile Include="Sources\Objects\Moveable\Monster\Vengefly.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Sources\UI\PauseUI.hpp" />
     <ClInclude Include="Sources\Maps\BossRoom_Map.hpp" />
     <ClInclude Include="Sources\Objects\Moveable\Monster\Vengefly.hpp" />
     <ClInclude Include="Sources\Objects\Collider.hpp" />
