수정 EffectMag -> SlashEffect
EffectMag -> SlashEffect 이름 변경

--- a/sfml-template.vcxproj.filters
+++ b/sfml-template.vcxproj.filters
@@ -38,7 +38,7 @@
     <ClCompile Include="Sources\Objects\Stable\Portal.cpp" />
     <ClCompile Include="Sources\Items\Coin.cpp" />
     <ClCompile Include="Sources\Items\Item.cpp" />
-    <ClCompile Include="Sources\Animation\EffectManager.cpp" />
+    <ClCompile Include="Sources\Animation\SlashEffect.cpp" />
     <ClCompile Include="Sources\Objects\Stable\BackgroundImages.cpp" />
     <ClCompile Include="Sources\Utils\Textbox.cpp" />
     <ClCompile Include="Sources\Objects\Stable\Bench.cpp" />
@@ -71,7 +71,7 @@
     <ClInclude Include="Sources\Objects\Stable\Portal.hpp" />
     <ClInclude Include="Sources\Items\Coin.hpp" />
     <ClInclude Include="Sources\Items\Item.hpp" />
-    <ClInclude Include="Sources\Animation\EffectManager.hpp" />
+    <ClInclude Include="Sources\Animation\SlashEffect.hpp" />
     <ClInclude Include="Sources\Objects\Stable\BackgroundImages.hpp" />
     <ClInclude Include="Sources\Utils\Textbox.hpp" />
     <ClInclude Include="Sources\Objects\Stable\Bench.hpp" />
