--- a/sfml-template.vcxproj
+++ b/sfml-template.vcxproj
@@ -161,7 +161,7 @@
     <ClCompile Include="Sources\Objects\Stable\KingsPassImages.cpp" />
     <ClCompile Include="Sources\Items\Item.cpp" />
     <ClCompile Include="Sources\Items\Coin.cpp" />
-    <ClCompile Include="Sources\Animation\EffectManager.cpp" />
+    <ClCompile Include="Sources\Animation\SlashEffect.cpp" />
     <ClCompile Include="Sources\Objects\Moveable\Monster\Crawlid.cpp" />
     <ClCompile Include="Sources\Objects\Stable\Bench.cpp" />
     <ClCompile Include="Sources\Objects\Stable\BackgroundImages.cpp" />
@@ -220,7 +220,7 @@
     <ClInclude Include="Sources\Objects\Stable\KingsPassImages.hpp" />
     <ClInclude Include="Sources\Items\Item.hpp" />
     <ClInclude Include="Sources\Items\Coin.hpp" />
-    <ClInclude Include="Sources\Animation\EffectManager.hpp" />
+    <ClInclude Include="Sources\Animation\SlashEffect.hpp" />
     <ClInclude Include="Sources\Objects\Moveable\Monster\Crawlid.hpp" />
     <ClInclude Include="Sources\Objects\Stable\Bench.hpp" />
     <ClInclude Include="Sources\Objects\Stable\BackgroundImages.hpp" />
