--- a/sfml-template.vcxproj
+++ b/sfml-template.vcxproj
@@ -148,6 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Sources\Animation\DashEffect.cpp" />
     <ClCompile Include="Sources\UI\PauseUI.cpp" />
     <ClCompile Include="Sources\Maps\BossRoom_Map.cpp" />
     <ClCompile Include="Sources\Objects\Collider.cpp" />
@@ -206,6 +207,7 @@
     <ClCompile Include="Sources\Objects\Moveable\Monster\Vengefly.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Sources\Animation\DashEffect.hpp" />
     <ClInclude Include="Sources\UI\PauseUI.hpp" />
     <ClInclude Include="Sources\Maps\BossRoom_Map.hpp" />
     <ClInclude Include="Sources\Objects\Moveable\Monster\FalseKnight.hpp" />
