추가 이펙트 추가
공격 시, 피격 시 이펙트 추가

--- a/sfml-template.vcxproj
+++ b/sfml-template.vcxproj
@@ -149,6 +149,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Sources\Animation\DashEffect.cpp" />
+    <ClCompile Include="Sources\Animation\HitEffect.cpp" />
     <ClCompile Include="Sources\UI\PauseUI.cpp" />
     <ClCompile Include="Sources\Maps\BossRoom_Map.cpp" />
     <ClCompile Include="Sources\Objects\Collider.cpp" />
@@ -208,6 +209,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Animation\DashEffect.hpp" />
+    <ClInclude Include="Sources\Animation\HitEffect.hpp" />
     <ClInclude Include="Sources\UI\PauseUI.hpp" />
     <ClInclude Include="Sources\Maps\BossRoom_Map.hpp" />
     <ClInclude Include="Sources\Objects\Moveable\Monster\FalseKnight.hpp" />
