--- a/sfml-template.vcxproj.filters
+++ b/sfml-template.vcxproj.filters
@@ -58,6 +58,7 @@
     <ClCompile Include="Sources\Objects\Moveable\Monster\FalseKnight.cpp" />
     <ClCompile Include="Sources\UI\PauseUI.cpp" />
     <ClCompile Include="Sources\Animation\DashEffect.cpp" />
+    <ClCompile Include="Sources\Animation\HitEffect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Scene\PlayScene.h" />
@@ -92,6 +93,7 @@
     <ClInclude Include="Sources\Objects\Moveable\Monster\FalseKnight.hpp" />
     <ClInclude Include="Sources\UI\PauseUI.hpp" />
     <ClInclude Include="Sources\Animation\DashEffect.hpp" />
+    <ClInclude Include="Sources\Animation\HitEffect.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Scene\PlayScene.hpp" />
